feat: add new files

--- a/01.html
+++ b/01.html
@@ -36,7 +36,7 @@
       background: 'orange',
       duration: 1, //seconds, not ms .6 .8 1 2 e t.c.
       delay: .8,
-      repeat: 5,
+      repeat: 5, //repeat: -1  - infinite animation
       repeatDelay: 1, //delay between repeat
       height: 120,
       width: 120,
